--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hunde-Gassi-App</string>
+    <string name="google_maps_api_key">AIzaSyCfgVZEAcdhJP7P7XTPGD4N9KLNxRzLS2U</string>
 </resources>
